--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,144 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    margin: 0; 
+    padding: 0; 
+    box-sizing: border-box; 
+    background-color: whitesmoke;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .container {
+    max-width: 1200px; 
+    margin: 0 auto; 
+    padding: 20px; 
   }
-  to {
-    transform: rotate(360deg);
+  
+  .banner {
+    background: #fff;
+    padding: 0px 20px; 
+    border-radius: 10px;
+    border: 0.5px solid lightgrey;
+    margin-bottom: 40px;
   }
+  
+  .card-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center; 
+  }
+  
+  
+  .card {
+    background: white;
+    border-radius: 10px;
+    border: 0.5px solid lightgrey;
+    overflow: hidden;
+    flex: 1; 
+    max-width: calc(25% - 20px); 
+    margin-bottom: 20px; 
+    min-width: 250px; 
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+    cursor: pointer; 
+  }
+  
+  .card:hover {
+    transform: scale(1.0125); 
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2); 
+}
+  
+  
+  .card-image {
+    width: calc(100% - 20px); 
+    height: 300px; 
+    margin: 10px; 
+    object-fit: cover; 
+    border-radius: 10px;
+}
+
+  
+  .card-info {
+    padding: 15px;
+  }
+  
+  .card-name {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 1.2em;
+    margin-bottom: 5px;
+  }
+  
+
+  .card-verified-badge {
+    display: flex;
+    align-items: center;
+    font-size: 0.6em; 
+    font-weight: bold; 
+    color: #7CB9E8; 
+    margin: 15px 0px;
+  }
+  
+  
+  
+  .card-details {
+    font-size: 0.9em; 
+  }
+  
+  .card-detail {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #ccc; 
+    margin: 8px 0;
+    padding-bottom: 8px;
+}
+
+.card-detail:last-child {
+    border-bottom: none; 
+}
+
+  .card-detail-key {
+    font-size: 0.7em;
+    color: grey;
+  }
+  
+  .card-detail-value {
+    font-size: 0.7em;
+  }
+  
+  
+  .card-flag {
+    width: 16px; 
+    height: 12px;
+    margin-right: 8px;
+    vertical-align: middle;
+  }
+  
+.search-bar {
+    margin-bottom: 40px; 
+    text-align: center;
+}
+
+.search-input {
+    font-size: 16px; 
+    padding: 10px 20px; 
+    width: 80%; 
+    max-width: 600px; 
+    border: 2px solid #ddd; 
+    border-radius: 20px; 
+    outline: none; 
+    transition: all 0.3s ease; 
+}
+
+.search-input:focus {
+    border-color: #007bff; 
+    box-shadow: 0 0 8px rgba(0, 123, 255, 0.2); 
+}
+
+.search-input::placeholder {
+    color: #999; 
+}
+
+.subtitle {
+    color: grey;
 }
